# Elder

./: .clang-format  README.md
engine/: CMakeLists.txt
engine/include/elder/: eepch.hpp  elder.hpp
engine/include/elder/core/: application.hpp  core.hpp  entry.hpp  layer.hpp  layer_stack.hpp  log.hpp  timer.hpp  uuid.hpp
engine/src/core/: application.cpp  core.cpp  layer.cpp  layer_stack.cpp  log.cpp  timer.cpp  uuid.cpp
testenv/: CMakeLists.txt
testenv/src/: entry.cpp
